--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -1,6 +1,6 @@
 #---------------------------
 # Hexo Theme Fluid   # Hexo主题流体
-# Author: Fluid-dev   #作者：Fluid-dev
+# Author: Fluid-dev   #作者：Fluid-dev#作者：Fluid-dev #
 # Github: https://github.com/fluid-dev/hexo-theme-fluid
 #
 # 配置指南: https://hexo.fluid-dev.com/docs/guide/
@@ -9,8 +9,10 @@
 # Guide: https://hexo.fluid-dev.com/docs/en/guide/#指南：https://hexo.fluid-dev.com/docs/en/guide/
 # You can get more detailed help from the guide你可以从指南中得到更详细的帮助
 #---------------------------
-
-
+deploy   部署:
+type: git
+repo: https://github.com/klshuaige7klshuaige7.github.io.git
+branch: main
 #---------------------------
 # 全局
 # Global   #全球
@@ -26,67 +28,67 @@ apple_touch_icon: /img/fluid.png
 
 # 浏览器标签页中的标题分隔符，效果：文章名 - 站点名
 # Title separator in browser tab, eg: article - site#在浏览器选项卡中的标题分隔符，例如：article - site
-tab_title_separator: " - "
+tab_title_separator: " - "Tab_title_separator: “ - ”
 
 # 强制所有链接升级为 HTTPS（适用于图片等资源出现 HTTP 混入报错）
 # Force all links to be HTTPS (applicable to HTTP mixed error)#强制所有链接为HTTPS（适用于HTTP混合错误）
-force_https: false   假
+force_https: false   假Force_https: false   假
 
 # 代码块的增强配置
 # Enhancements to code blocks增强代码块
-code:
+code   代码:
   # 是否开启复制代码的按钮
-  # Enable copy code button
-  copy_btn: true
+  #启用复制代码按钮# Enable copy code button#启用复制代码按钮
+  copy_btn: true   真正的
 
   # 代码语言
-  # Code language
-  language:
-    enable: true
-    default: "TEXT"
+     #代码语言# Code language   #代码语言
+  language   语言:
+    enable   启用: true   真正的
+    default   默认的: "TEXT"   “文本”
 
   # 代码高亮
-  # Code highlight
-  highlight:
-    enable: true
+     #代码高亮# Code highlight   #代码高亮
+  highlight   突出:
+    enable   启用: true   真正的
 
     # 代码块是否显示行号
-    # If true, the code block display line numbers
-    line_number: true
+    #如果为true，代码块显示行号# If true, the code block display line numbers#如果为true，代码块显示行号
+    line_number: true   真正的
 
     # 实现高亮的库，对应下面的设置
-    # Highlight library
-    # Options: highlightjs | prismjs
-    lib: "highlightjs"
+       #高亮库# Highlight library   #高亮库
+    #选项：highlightjs | prismjs# Options: highlightjs | prismjs#选项：highlightjs | prismjs
+    lib   自由: "highlightjs"   “highlightjs”
 
     highlightjs:
       # 在链接中挑选 style 填入
-      # Select a style in the link
-      # See: https://highlightjs.org/demo/
-      style: "github gist"
-      style_dark: "dark"
+      在链接中选择一个样式# Select a style in the link
+      #参见：https://highlightjs.org/demo/# See: https://highlightjs.org/demo/#参见：https://highlightjs.org/demo/
+      style   风格: "github gist"   “github要点”
+      style_dark: "dark"   “黑暗”
 
     prismjs:
       # 在下方链接页面右侧的圆形按钮挑选 style 填入，也可以直接填入 css 链接
-      # Select the style button on the right side of the link page, you can also set the CSS link
-      # See: https://prismjs.com/
-      style: "default"
-      style_dark: "tomorrow night"
+      #选择链接页面右侧的样式按钮，您也可以设置CSS链接# Select the style button on the right side of the link page, you can also set the CSS link#选择链接页面右侧的样式按钮，您也可以设置CSS链接
+      #参见：https://prismjs.com/# See: https://prismjs.com/#参见：https://prismjs.com/
+      style   风格: "default"   “默认”
+      style_dark: "tomorrow night"   “明天晚上”
 
       # 设为 true 高亮将本地静态生成（但只支持部分 prismjs 插件），设为 false 高亮将在浏览器通过 js 生成
-      # If true, it will be generated locally (but some prismjs plugins are not supported). If false, it will be generated via JS in the browser
-      preprocess: true
+      #如果为true，它将在本地生成（但不支持某些prismjs插件）。如果为false，它将在浏览器中通过JS生成# If true, it will be generated locally (but some prismjs plugins are not supported). If false, it will be generated via JS in the browser#如果为true，它将在本地生成（但不支持某些prismjs插件）。如果为false，它将在浏览器中通过JS生成
+      preprocess   进行预处理: true   真正的
 
 # 一些好玩的功能
-# Some fun features
+# Some fun features   #一些有趣的功能
 fun_features:
   # 为 subtitle 添加打字机效果
-  # Typing animation for subtitle
-  typing:
-    enable: true
+  #为字幕输入动画# Typing animation for subtitle#为字幕输入动画
+  typing   打字:
+    enable   启用: true   真正的
 
     # 打印速度，数字越大越慢
-    # Typing speed, the larger the number, the slower
+    # Typing speed, the larger the number, the slower#打字速度，数字越大越慢
     typeSpeed: 70
 
     # 游标字符
@@ -785,7 +787,7 @@ disqus:
   disqusjs: false
   apikey: 
     - 'KEY1'
-    #- 'KEY2'
+       #——“KEY2”#- 'KEY2'
   api: https://disqus.skk.moe/disqus/
   admin: 
   adminLabel: 
@@ -871,7 +873,7 @@ remark42:
   host:
   site_id:
   max_shown_comments: 10
-  locale: zh
+  locale: zh   地方:跨国
   components: ['embed']
 
 # Twikoo
@@ -1084,7 +1086,7 @@ links:
 
 static_prefix:
   # 内部静态
-  # Internal static
+     #内部静态# Internal static
   internal_js: /js
   internal_css: /css
   internal_img: /img
